增加4.1 节代码实现

--- a/CppAgorithm/CMakeLists.txt
+++ b/CppAgorithm/CMakeLists.txt
@@ -4,4 +4,4 @@ project(untitled LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-add_executable(untitled main.cpp)
+add_executable(untitled main.cpp "Chapter 4/Algotithm.h")
