--- a/CppAgorithm/CMakeLists.txt
+++ b/CppAgorithm/CMakeLists.txt
@@ -4,4 +4,7 @@ project(untitled LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-add_executable(untitled main.cpp "Chapter 4/Algotithm.h")
+include_directories(
+	Chapter 4/
+)
+add_executable(untitled main.cpp "Chapter 4/2. MatrixMutlipy .h")
