--- a/MySTL/CMakeLists.txt
+++ b/MySTL/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(
 )
 
 link_directories(
-        ${PROJECT_SOURCE_DIR}/TEST/lib
+        ${PROJECT_SOURCE_DIR}/TEST/lib/
 )
 
 add_executable(vector_and_list vector_and_list_test.cpp)
@@ -17,9 +17,8 @@ add_executable(stack_and_queue stack_and_queue.cpp)
 add_executable(my_heap my_heap.cpp)
 add_executable(main main.cpp)
 add_executable(sort sort_algorithm.cpp)
-#add_executable(test TEST/test_unittest.cpp)
-#
-#target_link_libraries(test
-#        gtest
-#        gtest_main
-#)
+add_executable(test TEST/stl_iterator_test.cpp)
+
+target_link_libraries(test
+        gtest
+)
