--- a/MySTL/CMakeLists.txt
+++ b/MySTL/CMakeLists.txt
@@ -28,23 +28,23 @@ add_executable(main
 #add_executable(test_stl_iterator TEST/stl_iterator_test.h)
 #target_link_libraries(test_stl_iterator gtest)
 
-#add_executable(test_stl_alloc TEST/stl_alloc_test.h)
-#target_link_libraries(test_stl_alloc gtest)
-#
+add_executable(test_stl_alloc TEST/stl_alloc_test.cpp)
+target_link_libraries(test_stl_alloc gtest)
+
 #add_executable(test_stl_vector TEST/stl_vector_test.h)
 #target_link_libraries(test_stl_vector gtest)
 
 #add_executable(test_stl_uninitialized TEST/stl_uninitialized_test.h)
 #target_link_libraries(test_stl_uninitialized gtest)
 
-add_executable(test_stl_construct TEST/stl_construct_test.cpp)
-target_link_libraries(test_stl_construct gtest)
+#add_executable(test_stl_construct TEST/stl_construct_test.h)
+#target_link_libraries(test_stl_construct gtest)
 
-add_executable(test_stl_deque TEST/stl_deque_test.cpp)
-target_link_libraries(test_stl_deque gtest)
+#add_executable(test_stl_deque TEST/stl_deque_test.cpp)
+#target_link_libraries(test_stl_deque gtest)
 
-add_executable(test_stl_algo TEST/stl_algo_test.cpp)
-target_link_libraries(test_stl_algo gtest)
+#add_executable(test_stl_algo TEST/stl_algo_test.h)
+#target_link_libraries(test_stl_algo gtest)
 
 add_executable(test_stl_map TEST/stl_map_test.cpp)
 target_link_libraries(test_stl_map gtest)
